--- a/_includes/custom/schedule.html
+++ b/_includes/custom/schedule.html
@@ -6,14 +6,14 @@
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>9-10am</td> <td> Containerization </td></tr>
+      <tr><td>9-10am</td> <td> <a href="https://imageomics.github.io/docker-workshop/" target="_blank"></a>Reproducible Computational Environments Using Containers: Introduction to Docker </td></tr>
       <tr><td>Break</td> <td>  </td></tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Part 2</h3>
     <table class="table table-striped">
-      <tr><td>10.30am-12.30pm</td><td> Workflow Automation </td></tr>
+      <tr><td>10.30am-12.30pm</td><td> <a href="https://imageomics.github.io/snakemake-workshop/" target="_blank"></a>Workflow Automation using Snakemake </td></tr>
       <tr>
         <td>During lunch</td>
         <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
