Adds custom pre and ppost-workshop surveys

--- a/_includes/custom/schedule.html
+++ b/_includes/custom/schedule.html
@@ -4,7 +4,7 @@
     <table class="table table-striped">
       <tr>
 	<td>Before starting</td>
-	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
+	<td><a href="{{ site.incubator_pre_survey }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr><td>9-10am</td> <td> <a href="https://imageomics.github.io/docker-workshop/" target="_blank"></a>Reproducible Computational Environments Using Containers: Introduction to Docker </td></tr>
       <tr><td>Break</td> <td>  </td></tr>
@@ -16,7 +16,7 @@
       <tr><td>10.30am-12.30pm</td><td> <a href="https://imageomics.github.io/snakemake-workshop/" target="_blank"></a>Workflow Automation using Snakemake </td></tr>
       <tr>
         <td>During lunch</td>
-        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
+        <td><a href="{{ site.incubator_post_survey }}" target="_blank">Post-workshop survey</a></td>
       </tr>
       <tr><td></td> <td> END </td></tr>
     </table>
